# chatbot-pyton-openai

./: README.md  pyproject.toml  testdata.xlsx
src/my_ai_project/openairagtest/: answer_excel.py  ask_question.py
